agregue ventana modal y validaciones de usaurios y spiner de carga
